--- a/styles/site.css
+++ b/styles/site.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'Gilroy-SemiBold';
   src: url('../fonts/Gilroy-SemiBold.otf');
 }
@@ -11,11 +11,11 @@
 @font-face {
   font-family: 'Gilroy-ExtraBold';
   src: url('../fonts/Gilroy-ExtraBold.otf');
-}
+} */
 
-body {
+/* body {
   font-family: 'Gilroy-Light' !important;
-}
+} */
 
 .card2 {
   display: flex;
